--- a/index.html
+++ b/index.html
@@ -55,11 +55,9 @@
 
         <h3>Navigation</h3>
         <ul class="nav-list">
-            <li><a class="smoothscroll" href="#intro" title="">1</a></li>
+            <li><a class="smoothscroll" href="#intro" title="">TOP</a></li>
             <li><a class="smoothscroll" href="#features" title="">2</a></li>
             <li><a class="smoothscroll" href="#infos" title="">3</a></li>
-            <li><a class="smoothscroll" href="#stats" title="">4</a></li>
-            <li><a class="smoothscroll" href="#pricing" title="">5</a></li>
             <li><a class="smoothscroll" href="#testimonials" title="">6</a></li>
             <li><a class="smoothscroll" href="#download" title="">7</a></li>
 
@@ -102,6 +100,8 @@
             <!-- /row -->
 
         </section>
+
+
         <!-- /intro -->
 
 
@@ -119,6 +119,7 @@
 
                 </div>
             </div>
+            <br><br>
             <div class="row section-intro group animate-this">
                 <div class="col-twelve with-bottom-line">
 
@@ -129,11 +130,85 @@
 
                 </div>
             </div>
+            <br><br>
+            <div class="row section-intro group animate-this">
+                <div class="col-twelve with-bottom-line">
+
+                    <h2 class="" style="color: red">Value</h2>
+                    <br>
+                    <div class="row features-wrap">
+
+                        <div class="features-list block-1-3 block-s-1-2 block-tab-full">
+
+                            <div class="bgrid feature animate-this">
+
+                                <!--span class="feature-count">01.</span-->
+
+                                <div class="feature-content">
+
+                                    <h3 style="text-align: center">透明性</h3>
+                                    <img src="images/icon1.png">
+                                    <p>会社内・外への情報公開を徹底します。
+                                    </p>
+
+                                </div>
+
+                            </div>
+                            <!-- /bgrid -->
+
+                            <div class="bgrid feature animate-this">
+
+                                <!--span class="feature-count">02.</span-->
+
+                                <div class="feature-content">
+
+                                    <h3 style="text-align: center">幸福度</h3>
+                                    <img src="images/icon2.png">
+
+                                    <p>関係者すべての幸福度を最大化するように活動します。
+                                    </p>
+
+                                </div>
+
+                            </div>
+                            <!-- /bgrid -->
+
+                            <div class="bgrid feature animate-this">
+
+                                <!--span class="feature-count">03.</span-->
+
+                                <div class="feature-content">
+
+                                    <h3 style="text-align: center">遊び心</h3>
+                                    <img src="images/icon3.png">
+
+                                    <p>常にユーモアを持ち、自由な発想でサービスを作ります。
+                                    </p>
+
+                                </div>
+
+                            </div>
+                            <!-- /bgrid -->
+
+                            <!-- /bgrid -->
+
+                        </div>
+                        <!-- /features-list -->
+
+                    </div>
+                    <p class="lead"></p>
+
+                </div>
+            </div>
 
 
-            <!-- /features-wrap -->
 
         </section>
+
+
+
+        <!-- /features -->
+
 
 
         <!-- /features -->
@@ -245,17 +320,21 @@
                             </li>
                             <li>
                                 <p>木村 優</p>
-                                <p class="author-info">BlockChain技術顧問<br>LCNEM CEO兼CTO<br>自身のブログのBlock Chainについての経済学的な観点でのコンテンツなどに定評あり<br>京都大学経済学部在学<br><br>Twitterはこちら
+                                <p class="author-info">BlockChain技術顧問<br>LCNEM CEO兼CTO<br>自身のブログのBlock Chainについての<br>経済学的な観点でのコンテンツなどに定評あり<br>京都大学経済学部在学<br><br>Twitterはこちら
 
                                 </p>
                             </li>
                             <li>
-                                <p></p>
-                                <p class="author-info"></p>
+                                <p>法律事務所 Zelo</p>
+                                <p class="author-info">顧問弁護士<br>PoliPoliは、最新のテクノロジーにも強い<br>法律事務所様と相談して法律面からの<br>万全な準備を整えております。<br><br>ホームページはこちら
+
+                                </p>
                             </li>
                             <li>
-                                <p></p>
-                                <p class="author-info"></p>
+                                <p>さまざまな方たち</p>
+                                <p class="author-info">PoliPoliアンバサダー<br>ポリポリの理念に共感し、さまざまな協力をして下さる人たちと<br>共に活動しております。<br>アンバサダーは随時募集しております。<br><br>アンバサダーに興味ある方はこちら
+
+                                </p>
                             </li>
                         </ul>
                     </div>
@@ -274,28 +353,28 @@
 
                 </div>
             </div>
+
         </section>
         <!-- /testimonials -->
 
 
         <!-- download
    	================================================== -->
-        <section id="download">
+        <section id=" download ">
 
-            <div class="overlay"></div>
+            <div class="overlay "></div>
 
-            <div class="row download-content">
-                <div class="col-twelve">
+            <div class="row download-content ">
+                <div class="col-twelve ">
 
-                    <!--div class="text-part">
-                        <h2 class="animate-this">Contact us!</h2>
+                    <!--div class="text-part ">
+                        <h2 class="animate-this ">Contact us!</h2>
 
-                        <p class="lead animate-this">Lorem ipsum Tempor do Excepteur nulla aute deserunt reprehenderit aute commodo aliquip laboris velit eu esse exercitation ex fugiat pariatur aute consequat. Lorem ipsum Fugiat mollit quis qui. Lorem ipsum Duis Excepteur Duis magna fugiat incididunt qui id quis dolor nisi irure proident labore ut in incididunt eiusmod est anim.</p>
+                        <p class="lead animate-this ">Lorem ipsum Tempor do Excepteur nulla aute deserunt reprehenderit aute commodo aliquip laboris velit eu esse exercitation ex fugiat pariatur aute consequat. Lorem ipsum Fugiat mollit quis qui. Lorem ipsum Duis Excepteur Duis magna fugiat incididunt qui id quis dolor nisi irure proident labore ut in incididunt eiusmod est anim.</p>
                     </div-->
 
-                    <a class="button large animate-this" href="https://docs.google.com/forms/d/e/1FAIpQLSe6TP9_dfD769MWN2FcjzSsfrlrGWqUK4lR2WcRgzTddk2Fag/viewform">                               
-			         Contact us!
-			      </a>
+                    <a class="button large animate-this " href="https://docs.google.com/forms/d/e/1FAIpQLSe6TP9_dfD769MWN2FcjzSsfrlrGWqUK4lR2WcRgzTddk2Fag/viewform "> Contact us!
+            </a>
 
                 </div>
             </div>
@@ -311,24 +390,24 @@
 
     <!-- footer
 	================================================== -->
-    <footer id="main-footer">
+    <footer id="main-footer ">
 
-        <div class="footer-social-wrap">
-            <div class="row">
+        <div class="footer-social-wrap ">
+            <div class="row ">
 
-                <ul class="footer-social-list">
-                    <li><a href="#">
-	             	<i class="fa fa-facebook-square"></i>
+                <ul class="footer-social-list ">
+                    <li><a href="# ">
+	             	<i class="fa fa-facebook-square "></i>
 	            </a></li>
-                    <li><a href="#">
-	              	<i class="fa fa-twitter"></i>
+                    <li><a href="# ">
+	              	<i class="fa fa-twitter "></i>
 	            </a></li>
-                    <li><a href="#">
-	              	<i class="fa fa-google-plus"></i>
+                    <li><a href="# ">
+	              	<i class="fa fa-google-plus "></i>
 	            </a></li>
 
-                    <li><a href="#">
-	              	<i class="fa fa-instagram"></i>
+                    <li><a href="# ">
+	              	<i class="fa fa-instagram "></i>
 	            </a></li>
 
                 </ul>
@@ -337,25 +416,25 @@
         </div>
         <!-- /footer-social-wrap -->
 
-        <div class="footer-info-wrap">
+        <div class="footer-info-wrap ">
 
-            <div class="row footer-info">
+            <div class="row footer-info ">
 
-                <div class="col-four tab-full">
-                    <h4>Corporate Profile</h4>
+                <div class="col-four tab-full ">
+                    <h4>株式会社PoliPoli</h4>
 
-                    <p>株式会社PoliPoli
+                    <p>
                     </p>
                 </div>
 
-                <div class="col-four tab-full collapse">
+                <div class="col-four tab-full collapse ">
                     <h4></h4>
 
                     <p>
                     </p>
                 </div>
 
-                <div class="col-four tab-full collapse">
+                <div class="col-four tab-full collapse ">
                     <h4></h4>
 
                     <p>
@@ -368,9 +447,9 @@
 
         <!-- /footer-info-wrap -->
 
-        <div class="footer-bottom">
+        <div class="footer-bottom ">
 
-            <div class="copyright">
+            <div class="copyright ">
                 <span>© Copyright PoliPoli Inc.</span>
                 <span>Design by Yoshihisa Kaino.</span>
             </div>
@@ -378,21 +457,21 @@
 
     </footer>
 
-    <div id="go-top">
-        <a class="smoothscroll" title="Back to Top" href="#top"><i class="fa fa-long-arrow-up"></i></a>
+    <div id="go-top ">
+        <a class="smoothscroll " title="Back to Top " href="#top "><i class="fa fa-long-arrow-up "></i></a>
     </div>
 
     <!-- preloader
    ================================================== -->
-    <div id="preloader">
-        <div id="loader"></div>
+    <div id="preloader ">
+        <div id="loader "></div>
     </div>
 
     <!-- Java Script
    ================================================== -->
-    <script src="js/jquery-2.1.3.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/jquery-2.1.3.min.js "></script>
+    <script src="js/plugins.js "></script>
+    <script src="js/main.js "></script>
 
 </body>
 
