--- a/index.html
+++ b/index.html
@@ -53,13 +53,12 @@
    ================================================== -->
     <nav id="menu-nav-wrap">
 
-        <h3>Navigation</h3>
+        <h3>PoliPoli Inc.</h3>
         <ul class="nav-list">
             <li><a class="smoothscroll" href="#intro" title="">TOP</a></li>
-            <li><a class="smoothscroll" href="#features" title="">2</a></li>
-            <li><a class="smoothscroll" href="#infos" title="">3</a></li>
-            <li><a class="smoothscroll" href="#testimonials" title="">6</a></li>
-            <li><a class="smoothscroll" href="#download" title="">7</a></li>
+            <li><a class="smoothscroll" href="#features" title="">ABOUT</a></li>
+            <li><a class="smoothscroll" href="#infos" title="">PRODUCTS</a></li>
+            <li><a class="smoothscroll" href="#testimonials" title="">MEMBER</a></li>
 
         </ul>
 
@@ -354,91 +353,47 @@
                 </div>
             </div>
 
+
         </section>
         <!-- /testimonials -->
 
 
-        <!-- download
-   	================================================== -->
-        <section id=" download ">
-
-            <div class="overlay "></div>
-
-            <div class="row download-content ">
-                <div class="col-twelve ">
-
-                    <!--div class="text-part ">
-                        <h2 class="animate-this ">Contact us!</h2>
-
-                        <p class="lead animate-this ">Lorem ipsum Tempor do Excepteur nulla aute deserunt reprehenderit aute commodo aliquip laboris velit eu esse exercitation ex fugiat pariatur aute consequat. Lorem ipsum Fugiat mollit quis qui. Lorem ipsum Duis Excepteur Duis magna fugiat incididunt qui id quis dolor nisi irure proident labore ut in incididunt eiusmod est anim.</p>
-                    </div-->
-
-                    <a class="button large animate-this " href="https://docs.google.com/forms/d/e/1FAIpQLSe6TP9_dfD769MWN2FcjzSsfrlrGWqUK4lR2WcRgzTddk2Fag/viewform "> Contact us!
-            </a>
-
-                </div>
-            </div>
-        </section>
-        <!-- /download -->
 
 
 
 
     </div>
     <!-- /main-content-wrap -->
-
-
+    <hr>
     <!-- footer
 	================================================== -->
     <footer id="main-footer ">
 
-        <div class="footer-social-wrap ">
-            <div class="row ">
 
-                <ul class="footer-social-list ">
-                    <li><a href="# ">
-	             	<i class="fa fa-facebook-square "></i>
-	            </a></li>
-                    <li><a href="# ">
-	              	<i class="fa fa-twitter "></i>
-	            </a></li>
-                    <li><a href="# ">
-	              	<i class="fa fa-google-plus "></i>
-	            </a></li>
-
-                    <li><a href="# ">
-	              	<i class="fa fa-instagram "></i>
-	            </a></li>
-
-                </ul>
-
-            </div>
-        </div>
-        <!-- /footer-social-wrap -->
 
         <div class="footer-info-wrap ">
 
             <div class="row footer-info ">
 
                 <div class="col-four tab-full ">
-                    <h4>株式会社PoliPoli</h4>
+                    <h4>Corporate Profile</h4>
 
-                    <p>
+                    <p>会社名<br>株式会社PoliPoli<br> <br>代表者<br>伊藤和真<br>
+                        <br>設立<br>2018年2月<br>
+                        <br>事業内容<br>ソフトウェア開発</p>
+                </div>
+
+                <div class="col-four tab-full collapse ">
+                    <h4>Contact us</h4>
+                    <p>メール<br>info.polipoli@gmail.com<br><br>Twitter<br>https://twitter.com/polipoli_vote
+                        <br><br>Facebook<br>http://~<br><br>フォーム<br>http://~
                     </p>
                 </div>
 
                 <div class="col-four tab-full collapse ">
-                    <h4></h4>
-
-                    <p>
-                    </p>
-                </div>
-
-                <div class="col-four tab-full collapse ">
-                    <h4></h4>
-
-                    <p>
-                    </p>
+                    <h4>News</h4>
+                    <p> 2018/05/01<br>テスト版リリース<br>
+                        <br>2018/02/17<br>登記完了</p>
                 </div>
 
 
@@ -450,7 +405,7 @@
         <div class="footer-bottom ">
 
             <div class="copyright ">
-                <span>© Copyright PoliPoli Inc.</span>
+                <span>&copy; 2018 PoliPoli Inc.</span>
                 <span>Design by Yoshihisa Kaino.</span>
             </div>
         </div>
