--- a/index.html
+++ b/index.html
@@ -1,44 +1,27 @@
 <!DOCTYPE html>
-<!--[if IE 8 ]><html class="no-js oldie ie8" lang="en"> <![endif]-->
-<!--[if IE 9 ]><html class="no-js oldie ie9" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!-->
-<html class="no-js" lang="en">
-<!--<![endif]-->
+
+<html class="no-js" lang="ja">
 
 <head>
-
-    <!--- basic page needs
-   ================================================== -->
     <meta charset="utf-8">
     <title>PoliPoli</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <!-- mobile specific metas
-   ================================================== -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <!-- CSS
-   ================================================== -->
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/main.css">
 
-    <!-- script
-   ================================================== -->
     <script src="js/modernizr.js"></script>
     <script src="js/pace.min.js"></script>
 
-    <!-- favicons
-	================================================== -->
-    <link rel="icon" type="image/png" href="favicon.png">
 
 </head>
 
 <body id="top">
 
-    <!-- header 
-   ================================================== -->
     <header class="main-header">
 
         <div class="logo">
@@ -49,8 +32,6 @@
 
     </header>
 
-    <!-- main navigation 
-   ================================================== -->
     <nav id="menu-nav-wrap">
 
         <h3>PoliPoli Inc.</h3>
@@ -65,30 +46,18 @@
 
 
     </nav>
-    <!-- /menu-nav-wrap -->
-
-
-    <!-- main content wrap
-   ================================================== -->
     <div id="main-content-wrap">
 
-
-        <!-- main content wrap
-   	================================================== -->
-        <section id="intro">
-
-            <!-- <div class="shadow-overlay"></div> -->
+        <section id="intro" class="colorfilter-base">
 
             <div class="row intro-content">
                 <div class="col-twelve">
 
-                    <h3 class="animate-intro"></h3>
+                    <!--h3 class="animate-intro"></h3>
 
-                    <h1 class="animate-intro"></h1>
+                    <h1 class="animate-intro"></h1-->
 
                     <div class="buttons">
-                        <!--a class="button stroke smoothscroll animate-intro" href="#features" title="">企画書はこちら</a-->
-                        <!--a class="button stroke smoothscroll animate-intro" href="#download" title="">Download</a-->
                     </div>
 
                     <img src="images/polipoli.png" alt="" class="animate-intro">
