Icons such as icomoon were added.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="icomoon/style.css">
 
     <script src="js/modernizr.js"></script>
     <script src="js/pace.min.js"></script>
@@ -354,8 +355,8 @@
 
                 <div class="col-four tab-full collapse ">
                     <h4>Contact us</h4>
-                    <p>メール<br>info.polipoli@gmail.com<br><br>Twitter<br>https://twitter.com/polipoli_vote
-                        <br><br>Facebook<br>http://~<br><br>フォーム<br>http://~
+                    <p><a href="info.polipoli@gmail.com"><span class="icon-mail"></span> メール</a><br><br><a href="#"><span class="icon-twitter"></span> Twitter</a>
+                        <br><br><span class="icon-facebook"></span> Facebook<br><br><span class="icon-file-text2"></span> お問い合わせ
                     </p>
                 </div>
 
