'Contact us' changed to 'Contact'.

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                 </div>
 
                 <div class="col-four tab-full collapse ">
-                    <h4>Contact us</h4>
+                    <h4>Contact</h4>
                     <p><a href="info.polipoli@gmail.com"><span class="icon-mail"></span> メール</a><br><br><a href="#"><span class="icon-twitter"></span> Twitter</a>
                         <br><br><span class="icon-facebook"></span> Facebook<br><br><span class="icon-file-text2"></span> お問い合わせ
                     </p>
