I changed the icomoon file hierarchy.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/vendor.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="icomoon/style.css">
+    <link rel="stylesheet" href="icomoon.css">
 
     <script src="js/modernizr.js"></script>
     <script src="js/pace.min.js"></script>
