--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                         <p class="animate-this" data-animate="fadeInLeft">『ポリポリ』は政治というイノベーションが遅れている分野を「エンターテイン」することで、イノベーションを起こします。
                             <br><br><strong>トークンエコノミー</strong>を用いて経済圏を作り出すことで、政治家と有権者双方のニーズを満たすために立ち上がったプラットフォームプロジェクトです。</p>
 
-                        <a href="#" class="button animate-this" data-animate="fadeInLeft">企画書はこちら</a>
+                        <a href="https://drive.google.com/file/d/1bcZwfdmxzAEqR8T3ERDrZxreUmFKC2t7/view" class="button animate-this" data-animate="fadeInLeft">企画書はこちら</a>
 
                     </div>
 
@@ -267,41 +267,41 @@
                             <li>
                                 <p>伊藤 和真
                                 </p>
-                                <p class="author-info"><strong>CEO&amp;CMO</strong><br>F Ventures東京アソシエイト<br>iOSエンジニア<br>元政治家事務所広報責任者<br>慶應大学在学中<br><br>Twitterはこちら</p>
+                                <p class="author-info"><strong>CEO&amp;CMO</strong><br>F Ventures東京アソシエイト<br>iOSエンジニア<br>元政治家事務所広報責任者<br>慶應大学在学中<br><br><a><span class="icon-twitter"></span></a></p>
                             </li>
                             <li>
                                 <p>倉田 隆成</p>
-                                <p class="author-info"><strong>COO&amp;CTO</strong><br>エンジニア(Ruby,PHP)<br>トークン設計者<br>法務担当<br>慶應大学在学中<br><br>Twitterはこちら
+                                <p class="author-info"><strong>COO&amp;CTO</strong><br>エンジニア(Ruby,PHP)<br>トークン設計者<br>法務担当<br>慶應大学在学中<br><br><a><span class="icon-twitter"></span></a>
 
                                 </p>
                             </li>
                             <li>
                                 <p>山田 仁太</p>
-                                <p class="author-info"><strong>CDO</strong><br>Web UI/UXデザイナー<br>フロントエンジニア(Swift)<br>Web Marketing<br>慶應大学在学中<br><br>Twitterはこちら
-
+                                <p class="author-info"><strong>CDO</strong><br>Web UI/UXデザイナー<br>フロントエンジニア(Swift)<br>Web Marketing<br>慶應大学在学中<br><br><a><span class="icon-twitter"></span>
+                                    </a>
                                 </p>
                             </li>
                             <li>
                                 <p>千葉 大志</p>
-                                <p class="author-info"><strong>技術顧問</strong><br>SNS, CtoCなど様々なアプリ開発に携わる<br>iOSDCなどのカンファレンスに登壇<br><br>Githubはこちら
-
+                                <p class="author-info"><strong>技術顧問</strong><br>SNS, CtoCなど様々なアプリ開発に携わる<br>iOSDCなどのカンファレンスに登壇<br><br><a><span class="icon-github"></span>
+</a>
                                 </p>
                             </li>
                             <li>
                                 <p>木村 優</p>
-                                <p class="author-info">BlockChain技術顧問<br>LCNEM CEO兼CTO<br>自身のブログのBlock Chainについての<br>経済学的な観点でのコンテンツなどに定評あり<br>京都大学経済学部在学<br><br>Twitterはこちら
+                                <p class="author-info">BlockChain技術顧問<br>LCNEM CEO兼CTO<br>自身のブログのBlock Chainについての<br>経済学的な観点でのコンテンツなどに定評あり<br>京都大学経済学部在学<br><br><a><span class="icon-twitter"></span></a>
 
                                 </p>
                             </li>
                             <li>
                                 <p>法律事務所 Zelo</p>
-                                <p class="author-info">顧問弁護士<br>PoliPoliは、最新のテクノロジーにも強い<br>法律事務所様と相談して法律面からの<br>万全な準備を整えております。<br><br>ホームページはこちら
+                                <p class="author-info">顧問弁護士<br>PoliPoliは、最新のテクノロジーにも強い<br>法律事務所様と相談して法律面からの<br>万全な準備を整えております。<br><br>ホームページは<a>こちら</a>
 
                                 </p>
                             </li>
                             <li>
                                 <p>さまざまな方たち</p>
-                                <p class="author-info">PoliPoliアンバサダー<br>ポリポリの理念に共感し、さまざまな協力をして下さる人たちと<br>共に活動しております。<br>アンバサダーは随時募集しております。<br><br>アンバサダーに興味ある方はこちら
+                                <p class="author-info">PoliPoliアンバサダー<br>ポリポリの理念に共感し、さまざまな協力をして下さる人たちと<br>共に活動しております。<br>アンバサダーは随時募集しております。<br><br>アンバサダーに興味ある方は<a>こちら</a>
 
                                 </p>
                             </li>
@@ -382,9 +382,7 @@
 
     </footer>
 
-    <div id="go-top ">
-        <a class="smoothscroll " title="Back to Top " href="#top "><i class="fa fa-long-arrow-up "></i></a>
-    </div>
+
 
     <!-- preloader
    ================================================== -->
