Virtual Pay item deleted.

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             </div>
             <!-- /info-entry -->
 
-            <div class="info-entry">
+            <!--div class="info-entry">
 
                 <div class="half-grey"></div>
 
@@ -242,10 +242,10 @@
                     </div>
 
                 </div>
-                <!-- /info-entry-content -->
+        
 
-            </div>
-            <!-- /info-entry -->
+            </div-->
+
 
         </section>
         <!-- infos -->
