--- a/index.html
+++ b/index.html
@@ -267,41 +267,41 @@
                             <li>
                                 <p>伊藤 和真
                                 </p>
-                                <p class="author-info"><strong>CEO&amp;CMO</strong><br>F Ventures東京アソシエイト<br>iOSエンジニア<br>元政治家事務所広報責任者<br>慶應大学在学中<br><br><a><span class="icon-twitter"></span></a></p>
+                                <p class="author-info"><strong>CEO&amp;CMO</strong><br>F Ventures東京アソシエイト<br>iOSエンジニア<br>元政治家事務所広報責任者<br>慶應大学在学中<br><br><a href="https://twitter.com/kazuma12222"><span class="icon-twitter"></span></a></p>
                             </li>
                             <li>
                                 <p>倉田 隆成</p>
-                                <p class="author-info"><strong>COO&amp;CTO</strong><br>エンジニア(Ruby,PHP)<br>トークン設計者<br>法務担当<br>慶應大学在学中<br><br><a><span class="icon-twitter"></span></a>
+                                <p class="author-info"><strong>COO&amp;CTO</strong><br>エンジニア(Ruby,PHP)<br>トークン設計者<br>法務担当<br>慶應大学在学中<br><br><a href="https://twitter.com/amnosmusic13"><span class="icon-twitter"></span></a>
 
                                 </p>
                             </li>
                             <li>
                                 <p>山田 仁太</p>
-                                <p class="author-info"><strong>CDO</strong><br>Web UI/UXデザイナー<br>フロントエンジニア(Swift)<br>Web Marketing<br>慶應大学在学中<br><br><a><span class="icon-twitter"></span>
+                                <p class="author-info"><strong>CDO</strong><br>Web UI/UXデザイナー<br>フロントエンジニア(Swift)<br>Web Marketing<br>慶應大学在学中<br><br><a href="https://twitter.com/Leo___1213"><span class="icon-twitter"></span>
                                     </a>
                                 </p>
                             </li>
                             <li>
                                 <p>千葉 大志</p>
-                                <p class="author-info"><strong>技術顧問</strong><br>SNS, CtoCなど様々なアプリ開発に携わる<br>iOSDCなどのカンファレンスに登壇<br><br><a><span class="icon-github"></span>
+                                <p class="author-info"><strong>技術顧問</strong><br>SNS, CtoCなど様々なアプリ開発に携わる<br>iOSDCなどのカンファレンスに登壇<br><br><a href="https://github.com/bati668/resume"><span class="icon-github"></span>
 </a>
                                 </p>
                             </li>
                             <li>
                                 <p>木村 優</p>
-                                <p class="author-info">BlockChain技術顧問<br>LCNEM CEO兼CTO<br>自身のブログのBlock Chainについての<br>経済学的な観点でのコンテンツなどに定評あり<br>京都大学経済学部在学<br><br><a><span class="icon-twitter"></span></a>
+                                <p class="author-info">BlockChain技術顧問<br>LCNEM CEO兼CTO<br>自身のブログのBlock Chainについての<br>経済学的な観点でのコンテンツなどに定評あり<br>京都大学経済学部在学<br><br><a href="https://twitter.com/YuKimura45z"><span class="icon-twitter"></span></a>
 
                                 </p>
                             </li>
                             <li>
                                 <p>法律事務所 Zelo</p>
-                                <p class="author-info">顧問弁護士<br>PoliPoliは、最新のテクノロジーにも強い<br>法律事務所様と相談して法律面からの<br>万全な準備を整えております。<br><br>ホームページは<a>こちら</a>
+                                <p class="author-info">顧問弁護士<br>PoliPoliは、最新のテクノロジーにも強い<br>法律事務所様と相談して法律面からの<br>万全な準備を整えております。<br><br>ホームページは<a href="http://zelojapan.com/">こちら</a>
 
                                 </p>
                             </li>
                             <li>
                                 <p>さまざまな方たち</p>
-                                <p class="author-info">PoliPoliアンバサダー<br>ポリポリの理念に共感し、さまざまな協力をして下さる人たちと<br>共に活動しております。<br>アンバサダーは随時募集しております。<br><br>アンバサダーに興味ある方は<a>こちら</a>
+                                <p class="author-info">PoliPoliアンバサダー<br>ポリポリの理念に共感し、さまざまな協力をして下さる人たちと<br>共に活動しております。<br>アンバサダーは随時募集しております。<br><br>アンバサダーに興味ある方は<a href="https://twitter.com/polipoli_vote">こちら</a>
 
                                 </p>
                             </li>
@@ -348,14 +348,14 @@
                 <div class="col-four tab-full ">
                     <h4>Corporate Profile</h4>
 
-                    <p>会社名<br>株式会社PoliPoli<br> <br>代表者<br>伊藤和真<br>
+                    <p>会社名<br>株式会社PoliPoli<br> <br>代表者<br>伊藤 和真<br>
                         <br>設立<br>2018年2月<br>
                         <br>事業内容<br>ソフトウェア開発</p>
                 </div>
 
                 <div class="col-four tab-full collapse ">
                     <h4>Contact</h4>
-                    <p><a href="info.polipoli@gmail.com"><span class="icon-mail"></span> メール</a><br><br><a href="#"><span class="icon-twitter"></span> Twitter</a>
+                    <p><a href="mailto:info.polipoli@gmail.com"><span class="icon-mail"></span> メール</a><br><br><a href="#"><span class="icon-twitter"></span> Twitter</a>
                         <br><br><span class="icon-facebook"></span> Facebook<br><br><span class="icon-file-text2"></span> お問い合わせ
                     </p>
                 </div>
@@ -376,7 +376,7 @@
 
             <div class="copyright ">
                 <span>&copy; 2018 PoliPoli Inc.</span>
-                <span>Design by Yoshihisa Kaino.</span>
+                <span>Design by <a href="https://twitter.com/yoshi1125hisa">yoshi.</a></span>
             </div>
         </div>
 
